[feat] angular material

--- a/src/views/500.ng.html
+++ b/src/views/500.ng.html
@@ -58,7 +58,7 @@
   <meta name="theme-color" content="#ffffff">
 
 </head>
-<body>
+<body class="mat-app-background">
 <app-root>500 Error</app-root>
 </body>
 </html>
