--- a/src/app/packs/home/home.component.html
+++ b/src/app/packs/home/home.component.html
@@ -9,6 +9,9 @@
 <h2>Here are some links to help you start: </h2>
 <ul>
   <li>
+    <h2><a target="_blank" rel="noopener" href="https://github.com/CaliStyle/trailpack-proxy-engine">Proxy Engine</a></h2>
+  </li>
+  <li>
     <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
   </li>
   <li>
