--- a/src/app/root/app.component.html
+++ b/src/app/root/app.component.html
@@ -1,1 +1,39 @@
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+  <mat-sidenav
+    [mode]="sidenav.mode"
+    [opened]="sidenav.opened"
+    [fixedInViewport]="sidenav.fixedInViewport"
+    [fixedTopGap]="sidenav.fixedTopGap"
+    [fixedBottomGap]="sidenav.fixedBottomGap"
+  >
+    <mat-nav-list>
+      <a
+        mat-list-item
+        routerLink="."
+      >
+        Home
+      </a>
+      <a
+        mat-list-item
+        [routerLink]="['./404']"
+      >
+        404
+      </a>
+      <a
+        mat-list-item
+        [routerLink]="['./500']"
+      >
+        500
+      </a>
+      <a
+        mat-list-item
+        href="https://cali-style.com"
+      >
+        CS Technologies
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
