--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+
+// Google Fonts
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400italic,700italic,400,700);
+
+// Font Variables
+$roboto-slab: 'Roboto Slab', serif;
+$open-sans: 'Open Sans', sans-serif;
+
+// Fonts
+$body-font: $open-sans;
+$header-font: $open-sans;
+
+// Styles
+body {
+  font-family: $body-font;
+  font-weight: normal;
+  margin: 0px;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: $header-font;
+  font-weight: normal;
+}
