--- a/src/views/index.ng.html
+++ b/src/views/index.ng.html
@@ -58,7 +58,7 @@
   <meta name="theme-color" content="#ffffff">
 
 </head>
-<body>
+<body class="mat-app-background">
   <app-root>Loading...</app-root>
 </body>
 </html>
