--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 // Google Fonts
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400italic,700italic,400,700);
+@import url('http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400italic,700italic,400,700');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 // Font Variables
 $roboto-slab: 'Roboto Slab', serif;
