--- a/src/views/index.ng.html
+++ b/src/views/index.ng.html
@@ -53,7 +53,7 @@
   <link rel="icon" type="image/png" sizes="96x96" href="/assets/images/icons/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/icons/favicon-16x16.png">
   <link rel="manifest" href="/assets/images/icons/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#000000">
   <meta name="msapplication-TileImage" content="/assets/images/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
