[fix] ng-packagr

--- a/src/app/root/app.component.html
+++ b/src/app/root/app.component.html
@@ -12,7 +12,7 @@
         routerLink="."
       >
         <mat-icon>home</mat-icon>
-        Home
+        <span>Home</span>
       </a>
       <a
         mat-list-item
