[fix] npm friendly pack names

--- a/src/views/404.ng.html
+++ b/src/views/404.ng.html
@@ -21,7 +21,7 @@
   <meta property="og:title" content="404"/>
   <meta property="og:description" content="404"/>
   <meta property="og:url" />
-  <meta property="og:site_name" content="Proxy Engine NG"/>
+  <meta property="og:site_name" content="NgEngine"/>
   <meta property="og:updated_time" />
   <meta property="og:image" content="/assets/images/icons/favicon-96x96.png" />
   <!-- Social: Article -->
