--- a/src/views/index.ng.html
+++ b/src/views/index.ng.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- SEO -->
-  <title>Proxy Engine NG</title>
+  <title>NgEngine</title>
   <meta name="description" content=""/>
   <meta name="robots" />
   <meta name="keywords" content=""/>
@@ -18,10 +18,10 @@
   <!-- Social: OG -->
   <meta property="og:locale" content="en" />
   <meta property="og:type" content="website"/>
-  <meta property="og:title" content="Proxy Engine NG"/>
-  <meta property="og:description" content="Proxy Engine NG"/>
+  <meta property="og:title" content="NgEngine"/>
+  <meta property="og:description" content="NgEngine"/>
   <meta property="og:url" />
-  <meta property="og:site_name" content="Proxy Engine NG"/>
+  <meta property="og:site_name" content="NgEngine"/>
   <meta property="og:updated_time" />
   <meta property="og:image" content="/assets/images/icons/favicon-96x96.png" />
   <!-- Social: Article -->
