--- a/src/app/packs/home/home.component.html
+++ b/src/app/packs/home/home.component.html
@@ -31,3 +31,7 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
+
+<pre>
+  {{ all | json }}
+</pre>
